# ROS_stuff

./: GDS_map.yaml  README.md  bas_time_sync.sh  creating udev rules.txt  data_recorder.sh  fan_stop  rosbag_record.sh  rosbag_record_cam.sh  scanmatcher
catkin_ws_laser_box/devel/: _setup_util.py
catkin_ws_laser_box/devel/include/arf_msgs/: encoder.h  img.h  imuRaw.h  imuReal.h  loc.h  rssi.h
catkin_ws_laser_box/devel/lib/arf_imu/: arf_imu_node
catkin_ws_laser_box/devel/lib/conv_imu_to_std/: conv_imu_msg
catkin_ws_laser_box/devel/lib/pkgconfig/: arf_imu.pc  arf_master.pc  arf_msgs.pc  conv_imu_to_std.pc
git_laser_scanner/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
git_laser_scanner/devel/include/ble_scanner/: BLEBeacon.h  BLEData.h
git_laser_scanner/devel/include/data_recorder/: Fs_space.h
git_laser_scanner/devel/include/image_exposure_msgs/: ExposureSequence.h  ImageExposureStatistics.h  SequenceExposureStatistics.h
git_laser_scanner/devel/include/pointgrey_camera_driver/: PointGreyConfig.h
git_laser_scanner/devel/include/rosserial_arduino/: Adc.h  Test.h  TestRequest.h  TestResponse.h  rgb.h
git_laser_scanner/devel/include/rosserial_msgs/: Log.h  RequestMessageInfo.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParam.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfo.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
git_laser_scanner/devel/include/statistics_msgs/: Stats1D.h
git_laser_scanner/devel/include/wfov_camera_msgs/: WFOVCompressedImage.h  WFOVImage.h  WFOVTrigger.h
git_laser_scanner/devel/lib/data_recorder/: data_recorder_node  imu_to_base_pub  initial_tf_pub  simple_data_recorder_node
git_laser_scanner/devel/lib/laser_condition/: laser_condition_node
git_laser_scanner/devel/lib/laser_conversions/: call_laser_assembler_srv  concatenate_pcls
git_laser_scanner/devel/lib/myahrs_plus_imu/: myahrs_plus_imu_node
git_laser_scanner/devel/lib/pkgconfig/: ble_scanner.pc  data_recorder.pc  image_exposure_msgs.pc  laser_condition.pc  laser_conversions.pc  master_laser_scanner.pc  myahrs_plus_imu.pc  pointgrey_camera_driver.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_windows.pc  rosserial_xbee.pc  slam_2d.pc  slam_3d.pc  statistics_msgs.pc  wfov_camera_msgs.pc
git_laser_scanner/devel/lib/pointgrey_camera_driver/: camera_node  list_cameras  stereo_node
git_laser_scanner/devel/lib/rosserial_server/: serial_node  socket_node
io_expander/: CMakeLists.txt  ReadMe.txt  package.xml
io_expander/include/: io_expander.hpp
io_expander/launch/: io_expander.launch
io_expander/src/: hid-libusb.c  io_expander.cpp
laser_scanner_copy/devel/: .catkin  .rosinstall  setup.sh
laser_scanner_copy/devel/include/data_recorder/: Fs_space.h
laser_scanner_copy/devel/include/image_exposure_msgs/: ExposureSequence.h  ImageExposureStatistics.h  SequenceExposureStatistics.h
laser_scanner_copy/devel/include/pointgrey_camera_driver/: PointGreyConfig.h
laser_scanner_copy/devel/include/rosserial_arduino/: Adc.h  Test.h  TestRequest.h  TestResponse.h  rgb.h
laser_scanner_copy/devel/include/rosserial_msgs/: Log.h  RequestMessageInfo.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParam.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfo.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
projects/: sb_kill.sh  sb_run.sh  sb_service.conf  sb_start.sh  sb_stop.sh  setup.bash
pyhash/: CMakeLists.txt  basic.launch  package.xml
wc_duino/: 41-freek_mega.rules  wc_duino.ino  wcduino.launch
wc_encoders/: CMakeLists.txt  package.xml  platform.launch
wc_encoders/jt/: 31-5-16.csv
wc_encoders/src/: SerialCom.cpp  WheelEncoder.cpp  wc_encoders_node.cpp
wc_js_controller/: CMakeLists.txt  js_l.launch  mainpage.dox  manifest.xml
wc_js_controller/src/: follow.cpp  teleop.cpp
wheelchair_proxy/: CMakeLists.txt  boxlas.launch  mainpage.dox  manifest.xml  wc_launch.launch
wheelchair_proxy/dev_rules/: 50-serial_box.rules  51-lenc.rules  52-renc.rules  53-front_laser.rules  55-rfu.rules  60-box_laser.rules  61-box_imu.rules  readme
wheelchair_proxy/include/: RFUnit.h  common.h  defs.h  main.h  rfu_ser.h  wheelchair.h
wheelchair_proxy/src/: SerialCom.cpp  WheelEncoder.cpp  coop_  main.cpp  teleop.cpp  test_drive.cpp  wheelchair.cpp
wheelchair_proxy/src/RF/: RFUnit.cpp  rfu_ros.cpp  rfu_ser.cpp
(+162 files in other folders)
